[workspace]
members = [
    "contracts/*",
    "packages/*",
]

resolver = "2"

[workspace.package]
version    = "0.1.0"
edition    = "2021"
authors     = [ "Kromsten <s@noreply.megarock.labs>" ]
repository = ""


[workspace.dependencies]
cosmwasm-std            = { version = "1.5.5",  features = ["staking", "stargate" ] }
cosmwasm-schema         = "1.5.5"
cw-storage-plus         = "1.2.0"

k256                    = { version = "0.13.3", default-features = false, features = ["ecdsa"] }
bech32                  = { version = "0.11.0", default-features = false, features = ["alloc"] }
sha2                    = { version = "0.10.8", default-features = false } 

schemars                = "0.8.15"
semver                  = "1.0.20"
thiserror               = "1.0.50"

cw-ownable              = "0.5.1"
cw-utils                = "1.0.3"
cw1                     = "1.1.2"
cw2                     = "1.1.2"

saa                     = { git = "https://github.com/MegaRockLabs/smart-account-auth", package = "smart-account-auth", features = ["cosmwasm"]}
cw81                    = { git = "https://github.com/megarocklabs/cw-extra", package = "cw81" }
cw82                    = { git = "https://github.com/megarocklabs/cw-extra", package = "cw82" }
cw83                    = { git = "https://github.com/megarocklabs/cw-extra", package = "cw83" }
cw22                    = { git = "https://github.com/aura-nw/cw-plus",       package = "cw22" }

common                  = { path = "packages/common" }

[profile.release]
rpath            = false
lto              = true
overflow-checks  = true
opt-level        = 3
debug            = false
debug-assertions = false
