[package]
name        = "cw83-temp"
version     = { workspace = true }
edition     = { workspace = true }
repository  = { workspace = true }
authors     = { workspace = true }
description = ""

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []

[dependencies]
thiserror           = { workspace = true }
semver              = { workspace = true }
cosmwasm-schema     = { workspace = true }
cosmwasm-std        = { workspace = true }
cw-storage-plus     = { workspace = true }
cw-utils            = { workspace = true }
cw2                 = { workspace = true }
cw82                = { workspace = true }
cw83                = { workspace = true }
cw22                = { workspace = true }

common              = { workspace = true }